# ConservationConcernFlorida

./: .gitignore  Makefile  README.md  pyproject.toml
ccf/: downloader.py  fna_downloader.py  fna_get_keys.py  fna_lm_pipeline.py  fna_lm_train_model.py  fna_parser.py  fna_rule_parser.py  fna_training_data.py  fna_try_lm.py  natureserve_downloader.py  natureserve_parser.py
ccf/history/: fix_seed_info.py  seed_downloader.py  seed_genera_downloader.py  seed_species_downloader.py
ccf/pylib/: dimension.py  fna_parse_treatment.py  lm_data.py  pipeline.py  str_util.py  track_scores.py  trait_extractor.py
ccf/pylib/rules/: range.py  size.py
ccf/pylib/rules/terms/: fruit_types.csv
ccf/rules/: base.py  fruit_size.py  fruit_type.py  leaf_duration.py  leaf_size.py  other_size.py  part_color.py  range.py  seed_size.py  shape.py  size.py
ccf/rules/terms/: dimension_terms.csv  fruit_terms.csv  leaf_terms.csv  other_terms.csv  plant_terms.csv  seed_terms.csv  shape_terms.csv
ccf/terms/: canada.csv  dimension_terms.csv  fruit_types.csv  leaf_duration.csv  leaf_terms.csv
nature/: downloader.py  parse_list.py  parse_pages.py
nature/pylib/: nature_serve_reader.py  pipeline.py  util.py
nature/pylib/terms/: usa.csv
notebooks/: fna_lm_pipeline.ipynb  lm_training_v1.ipynb
tests/: setup.py
tests/pylib/: test_fna_rule_parser.py  test_info_rule_parser.py
tests/rules/: test_fruit_size.py  test_fruit_type.py  test_leaf_duraton.py  test_leaf_size.py  test_plant_height.py  test_seed_size.py  test_shape.py  test_size.py
