[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "ConcervationConcernFlorida"
version = "0.0.1"
readme = "README.md"
description = ""
license = { file = "LICENSE" }
authors = [{ name = "Raphael LaFrance", email = "raphael.lafrance@gmail.com" }]
requires-python = ">=3.14"
dependencies = [
    "Jinja2",
    "beautifulsoup4",
    "dspy",
    "dspy-ai",
    "ftfy",
    "jupyterlab>=4.5.1",
    "levenshtein",
    "lxml",
    "pandas",
    "pillow",
    "playwright",
    "regex",
    "rich",
    "spacy",
    "tqdm",
]
optional-dependencies.dev = [
    "build",
    "ruff",
    "ruff-lsp",
    "jupyter",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["ccf"]
namespaces = false

[project.scripts]

[tool.setuptools]
py-modules = []

[tool.ruff]
exclude = ["notebooks/*"]

show-fixes = true

[tool.ruff.format]
docstring-code-format = true

[tool.ruff.lint]

select = ["ALL"]

ignore = [
    "A003",    # Class attribute is shadowing a Python builtin
    "ANN401",  # Dynamically typed expressions (typing.Any) are disallowed
    "ARG001",  # Unused function argument
    "COM812",  # Trailing comma missing
    "D100",    # Missing docstring in public module
    "D101",    # Missing docstring in public class
    "D102",    # Missing docstring in public method
    "D103",    # Missing docstring in public function
    "D104",    # Missing docstring in public package
    "D105",    # Missing docstring in public method
    "D107",    # Missing docstring in public __init__
    "D203",    # 1 blank line required before class docstring
    "D205",    # 1 blank line required between summary line and description
    "D212",    # Multi-line docstring summary should start at the first line
    "DTZ005",  # Pass a `datetime.timezone` object to the `tz` parameter
    "DTZ011",  # datetime.date.today() used
    "ERA001",  # Remove commented-out code
    "FIX002",  # Line contains TODO
    "G004",    # Logging statement uses f-string
    "ISC001",  # Implicitly concatenated string literals on one line
    "N818",    # Exception name {name} should be named with an Error suffix
    "PD901",   # Avoid using the generic variable name df for DataFrames
    "PLR0913", # Too many arguments in function definition ({c_args} > {max_args})
    "PLR2004", # Magic value used in comparison, consider replacing with a constant variable
    "PLW0603", # Using the global statement to update {name} is discouraged
    "PLW2901", # Outer {outer_kind} variable {name} overwritten by inner {inner_kind} target
    "PT009",   # Use a regular assert instead of unittest-style {assertion}
    "RET504",  # Unnecessary assignment to {name} before return statement
    "RUF001",  # Ambiguous quote character in string
    "RUF002",  # Docstring contains ambiguous `‘`
    "RUF003",  # Comment contains ambiguous "-"
    "S602",    # subprocess` call with `shell=True` identified, security issue
    "S607",    # Starting a process with a partial executable path
    "S608",    # Possible SQL injection vector through string-based query construction
    "SIM114",  # Combine if branches using logical or operator
    "SIM117",  # Use a single with statement with multiple contexts instead of nested with statements
    "SLF001",  # Private member accessed: {access}
    "T201",    # print found
    "TD002",   # Missing author in TODO
    "TD003",   # Missing issue link on the line following this TODO
]

[tool.ty.rules]
non-subscriptable = "ignore"
